--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "electron": "^1.6.6",
     "foreman": "^2.0.0",
+    "gulp": "^3.9.1",
     "react-scripts": "0.9.5"
   },
   "main": "src/electron-starter.js",
